# fastapi-tdd-dio-store

./: Makefile  README.md  docker-compose.yml  pyproject.toml
store/: main.py
tests/: conftest.py  factories.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
